# chess-analyzer-desktop

./: .gitignore  README.md  app_controller.py  desktop_app.py  main.py  pyproject.toml  run_dev.py
.github/workflows/: ci.yml
chess_analyzer/: containers.py  exceptions.py  statistics.py  tracing.py  types.py
chess_analyzer/config/: settings.py
chess_analyzer/core/: board_analyzer.py  chess_utils.py  game_phaser.py  heuristics.py  move_characterizer.py  move_classifier.py  narrative_generator.py  pgn_parser.py  stats_updater.py  summary_aggregator.py  time_parser.py
chess_analyzer/orchestration/: annotator_client.py  game_processor.py  game_processor_pool.py  orchestrator.py  persistence_client.py  pipeline_factory.py  pipeline_stages.py  run_config_factory.py
chess_analyzer/output/: report_generator.py
chess_analyzer/persistence/: queries.py  training_data_service.py
chess_analyzer/services/: analysis_provider.py  database_manager.py  engine_pool.py  pgn_service.py  sqlite_cache_service.py  stockfish_service.py
chess_analyzer/utils/: logging_config.py  metrics.py  qt_logging.py  retry.py  signal_manager.py  system_utils.py
state/: app_state.py
tests/core/: test_chess_utils.py  test_game_phaser.py  test_move_characterizer.py  test_move_classifier.py  test_pgn_parser.py
tests/orchestration/: test_orchestrator.py  test_pipeline_stages.py
views/: annotated_game_view.py  charting_components.py  game_report_model.py  game_report_view.py  move_delegate.py  run_analysis_view.py  statistics_dashboard_view.py
views/dashboard/: arsenal_view.py  (+15 more)
(+4 files in other folders)
